[package]
name = "quicksync"
version = "0.2.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.24", features = ["derive"] }
duration-string = "0.4.0"
md5 = "0.7.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "stream", "blocking"] }
rusqlite = { version = "0.32.1", features = ["bundled", "backup"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
url = "2.5.4"
zstd = "0.13.0"
hex = "0.4"
parse-display = "0.10.0"

[dev-dependencies]
mockito = "1.6.1"
rand = "0.8.5"
tempfile = "3.15.0"
