[package]
name = "quicksync"
version = "0.2.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
duration-string = "0.5.2"
md5 = "0.7.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "stream", "blocking"] }
rusqlite = { version = "0.33.0", features = ["bundled", "backup"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
url = "2.5.4"
zstd = "0.13.3"
hex = "0.4"
parse-display = "0.10.0"

[dev-dependencies]
mockito = "1.6.1"
rand = "0.9.0"
tempfile = "3.17.1"
